# ecalspy

./: .gitignore  README.md  conf-example.json  pyproject.toml
ecalsgui/: package-lock.json  package.json  vite.config.ts
ecalsgui/src/: App.css  App.tsx  routes.tsx
ecalsgui/src-tauri/: Cargo.toml  tauri.conf.json
ecalsgui/src-tauri/src/: main.rs
ecalsgui/src/components/: app-sidebar.tsx  login-form.tsx
ecalsgui/src/layouts/: sidebar-layout.tsx
src/: ecals_cli.py  ecals_daemon.py  main.py
src/ecalspy/: __init__.py
src/ecalspy/core/: __init__.py  es_calendar.py  es_config_manager.py  es_cookie_manager.py  es_db.py  es_epu_api_client.py  es_ocr.py  es_utils.py
src/ecalspy/feat/: __init__.py  es_google_calendar.py
